--- a/HPP/src/main/webapp/WEB-INF/resources/css/template.css
+++ b/HPP/src/main/webapp/WEB-INF/resources/css/template.css
@@ -1,35 +1,92 @@
 @charset "UTF-8";
 
-.w3-top {
-    top: 0;
+*{
+	margin: 0;
+	padding: 0;
 }
 
-.w3-top, .w3-bottom {
+:root {
+  --header-heigth: 50px;
+}
+
+.wrap{
+	width: 100%;
+}
+
+.content{
+	margin-top: var(--header-heigth);
+}
+
+.Header, .content, .Footer{
+	width: 100%;
+	float: left;
+}
+
+.Header, .Footer{
+	height: 8em;
+}
+
+.SideBar{
+	width: 10%;
+	height: 600px;
+	background-color: #FFBB00;
+	float: left;
+}
+
+.banner{
+	width: 10%;
+	height: 600px;
+	background-color: cyan;
+	float: left;
+}
+
+.page_content{
+	width: 80%;
+	height: 600px;
+	background-color: #EAEAEA;
+	float: left;
+}
+
+.Header{
+	background-color: #ABF200;
+}
+
+.Footer{
+	background-color: #FF00DD;
+}
+
+/* 네비게이터 css 시작 */
+.logo-pont{
+	font-family: 나눔손글씨 가람연꽃; 
+	font-size: 26px; 
+	font-weight: bold;
+    padding: 8px 16px;
+    float: left;
+    width: auto;
+    border: none;
+    display: block;
+    outline: 0;	
+}
+
+.w3-top {
+	top: 0;
     position: fixed;
     width: 100%;
+    height: var(--header-heigth);
     z-index: 1;
-}
-
-.w3-white, .w3-hover-white:hover {
-    color: #000!important;
-    background-color: #fff!important;
-}
-
-.w3-card, .w3-card-2 {
-    box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
 }
 
 .w3-bar {
     width: 100%;
+    height: 100%;
     overflow: hidden;
 }
 
 .w3-bar .w3-button {
-    padding: 16px;
     white-space: normal;
 }
 .w3-bar .w3-bar-item {
-    padding: 8px 16px;
+    padding: 15px 16px;
     float: left;
     width: auto;
     border: none;
@@ -64,3 +121,4 @@
 .w3-right {
     float: right!important;
 }
+/* 네비게이터 css 끝 */
