--- a/HPP/src/main/webapp/WEB-INF/resources/css/template.css
+++ b/HPP/src/main/webapp/WEB-INF/resources/css/template.css
@@ -1,4 +1,8 @@
 @charset "UTF-8";
+a {
+	text-decoration: none;
+	color: black;
+}
 
 *{
 	margin: 0;
@@ -6,7 +10,7 @@
 }
 
 :root {
-  --header-heigth: 50px;
+  --header-heigth: 70px;
 }
 
 .wrap{
@@ -56,7 +60,7 @@
 }
 
 /* 네비게이터 css 시작 */
-.logo-pont{
+.logo-font{
 	font-family: 나눔손글씨 가람연꽃; 
 	font-size: 26px; 
 	font-weight: bold;
@@ -66,9 +70,10 @@
     border: none;
     display: block;
     outline: 0;	
+    letter-spacing: 4px;
 }
 
-.w3-top {
+.top {
 	top: 0;
     position: fixed;
     width: 100%;
@@ -76,49 +81,52 @@
     z-index: 1;
 }
 
-.w3-bar {
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
+.navMnu{
+    padding: 4px 16px;	
 }
 
-.w3-bar .w3-button {
-    white-space: normal;
+.navDiv {
+    float: right;
+    display: inline-grid;
 }
-.w3-bar .w3-bar-item {
-    padding: 15px 16px;
-    float: left;
-    width: auto;
-    border: none;
+
+.navMnuDiv{
+	font-size: 18px;
     display: block;
-    outline: 0;
-}
-.w3-btn, .w3-button {
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-}
-.w3-btn, .w3-button {
-    border: none;
-    display: inline-block;
-    padding: 8px 16px;
-    vertical-align: middle;
-    overflow: hidden;
-    text-decoration: none;
-    color: inherit;
-    background-color: inherit;
-    text-align: center;
-    cursor: pointer;
-    white-space: nowrap;
-}
-.w3-wide {
-    letter-spacing: 4px;
+    float: right;	
+ 	margin: 8px 0px;   
 }
 
-.w3-right {
-    float: right!important;
+.loginMnuDiv{
+	font-size: 13px;
+    width: 100%;
+    display: inline-block;	
+}
+
+.loginMnu{
+    padding: 5px 3px 0px 3px;
+	float: right;
+	cursor: pointer;
+}
+
+.logoDiv{
+    margin: 10px;
+    display: inline-block;	
+}
+
+.dropdown-content {
+  display: none;
+  position: relative;
+  background-color: #f9f9f9;
+  width: 100%;
+  left: 0;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  z-index: 1;
+  top: 0;
+  height: 300px;
+}
+
+.navMnuDiv:hover ~ .dropdown-content{
+  	display: inline-block;
 }
 /* 네비게이터 css 끝 */
