로그인 구현 중

--- a/HPP/src/main/webapp/WEB-INF/resources/css/template.css
+++ b/HPP/src/main/webapp/WEB-INF/resources/css/template.css
@@ -309,4 +309,15 @@ table.dataTable thead th{
 	color: red;
 	font-weight: bold;
 }
+
+.papang_disabled {
+	cursor: default;
+	background-color: #eee;
+	opacity: 1;
+	pointer-events: none;
+}
+
+label{
+	cursor: pointer;
+}
 /* 전체 공용 끝 */
