--- a/HPP/src/main/webapp/WEB-INF/resources/css/template.css
+++ b/HPP/src/main/webapp/WEB-INF/resources/css/template.css
@@ -266,6 +266,44 @@ table.dataTable.no-footer{
 }
 /* 파일첨부 끝 */
 
+/* 로딩바 시작 */
+.loadingPanel{
+	display: none;
+	position: fixed;
+	top: 0px;
+	width: 100%;
+	height: 100%;
+	justify-content: center;
+	align-items: center;
+	z-index: 9999;
+}
+
+.loadingImg{
+	width: 120px;
+	height: 120px;
+	border: 7px solid rgba(168, 151, 198, 0.2);
+	border-top-color: #5894cf;
+	border-radius: 50%;
+	animation: spinner 800ms infinite linear;
+}
+
+.loadingText{
+	position: fixed;
+	font-weight: bold;
+	animation: flicker 1100ms infinite alternate;
+}
+
+@keyframes spinner{
+	from {transform: rotate(0deg);}
+	to   {transform: rotate(359deg);}
+}
+
+@keyframes flicker{
+	from {opacity: 1;}
+	to   {opacity: 0;}
+}
+/* 로딩바 끝 */
+
 /* 전체 공용 시작 */
 table.dataTable thead th{
 	text-align: center;
