--- a/HPP/src/main/webapp/WEB-INF/resources/css/template.css
+++ b/HPP/src/main/webapp/WEB-INF/resources/css/template.css
@@ -26,6 +26,11 @@ input[type = 'date']{
   --navMnu-color: rgb(255 210 88);
 }
 
+.form-control{
+	display: inline-block;
+	padding: 0;	
+}
+
 .wrap{
 	width: 100%;
 }
