로그인 쿠키 수정, 요청기록조회 팝업 구현 중

--- a/HPP/src/main/webapp/WEB-INF/resources/css/template.css
+++ b/HPP/src/main/webapp/WEB-INF/resources/css/template.css
@@ -26,6 +26,10 @@ input[type = 'date']{
   --navMnu-color: rgb(255 210 88);
 }
 
+.selectedRow{
+	background-color: red;
+}
+
 .form-control{
 	display: inline-block;
 	padding: 0;	
