요청기록조회 팝업 완성

--- a/HPP/src/main/webapp/WEB-INF/resources/css/common.css
+++ b/HPP/src/main/webapp/WEB-INF/resources/css/common.css
@@ -22,6 +22,70 @@
 .w95{width:95%;} 
 .w100{width:100%;} 
 
+.h0{height:0%;} 
+.h5{height:5%;} 
+.h10{height:10%;} 
+.h15{height:15%;} 
+.h20{height:20%;} 
+.h25{height:25%;} 
+.h30{height:30%;} 
+.h35{height:35%;} 
+.h40{height:40%;} 
+.h45{height:45%;} 
+.h50{height:50%;} 
+.h55{height:55%;} 
+.h60{height:60%;} 
+.h65{height:65%;} 
+.h70{height:70%;} 
+.h75{height:75%;} 
+.h80{height:80%;} 
+.h85{height:85%;} 
+.h90{height:90%;} 
+.h95{height:95%;} 
+.h100{height:100%;} 
+
+.h0px{height:0px;} 
+.h5px{height:5px;} 
+.h10px{height:10px;} 
+.h15px{height:15px;} 
+.h20px{height:20px;} 
+.h25px{height:25px;} 
+.h30px{height:30px;} 
+.h35px{height:35px;} 
+.h40px{height:40px;} 
+.h45px{height:45px;} 
+.h50px{height:50px;} 
+.h55px{height:55px;} 
+.h60px{height:60px;} 
+.h65px{height:65px;} 
+.h70px{height:70px;} 
+.h75px{height:75px;} 
+.h80px{height:80px;} 
+.h85px{height:85px;} 
+.h90px{height:90px;} 
+.h95px{height:95px;} 
+.h100px{height:100px;} 
+.h105px{height:105px;} 
+.h110px{height:110px;} 
+.h115px{height:115px;} 
+.h120px{height:120px;} 
+.h125px{height:125px;} 
+.h130px{height:130px;} 
+.h135px{height:135px;} 
+.h140px{height:140px;} 
+.h145px{height:145px;} 
+.h150px{height:150px;} 
+.h155px{height:155px;} 
+.h160px{height:160px;} 
+.h165px{height:165px;} 
+.h170px{height:170px;} 
+.h175px{height:175px;} 
+.h180px{height:180px;} 
+.h185px{height:185px;} 
+.h190px{height:190px;} 
+.h195px{height:195px;} 
+.h200px{height:200px;} 
+
 
 	
 
