요청 로그 조회 완료, 로그인 로그 조회 구현 중

--- a/HPP/src/main/webapp/WEB-INF/resources/css/common.css
+++ b/HPP/src/main/webapp/WEB-INF/resources/css/common.css
@@ -1,5 +1,10 @@
 @charset "UTF-8";
 
+.pointer{cursor: pointer;}
+.tr{text-align: right;}
+.tl{text-align: left;}
+.tc{text-align: center;}
+
 .w0{width:0%;} 
 .w5{width:5%;} 
 .w10 {width:10%;} 
