--- a/HPP/src/main/webapp/WEB-INF/resources/css/template.css
+++ b/HPP/src/main/webapp/WEB-INF/resources/css/template.css
@@ -420,6 +420,6 @@ label{
 	margin: 5px 0px 10px 0px;
     background-color: #f3f3f3;
     border-radius: 10px;
-    padding: 5px 0px 5px 0px;
+    padding: 5px;
 }
 /* 전체 공용 끝 */
