--- a/HPP/src/main/webapp/WEB-INF/resources/css/template.css
+++ b/HPP/src/main/webapp/WEB-INF/resources/css/template.css
@@ -200,7 +200,7 @@ input[type = 'date']{
     font-weight: 900;	
 }
 
-.tableTitleDiv{
+.titleDiv{
 	font-size: 16px;
     padding: 5px;
     font-weight: 900;	
