--- a/HPP/src/main/webapp/WEB-INF/resources/css/template.css
+++ b/HPP/src/main/webapp/WEB-INF/resources/css/template.css
@@ -287,6 +287,10 @@ table.dataTable.no-footer{
 	padding: 2px;	
 }
 
+.papang-info-table th{
+	padding-right: 5px;
+}
+
 .papang-search-table input, .papang-info-table input{
 	padding-left: 5px;	
 }
