권한 관리 구현 중

--- a/HPP/src/main/webapp/WEB-INF/resources/css/template.css
+++ b/HPP/src/main/webapp/WEB-INF/resources/css/template.css
@@ -447,4 +447,20 @@ label{
     border-radius: 10px;
     padding: 5px;
 }
+
+.invisibleInput{
+	border: none;
+}
+
+.tc{
+	text-align: center;
+}
+
+.tr{
+	text-align: right;
+}
+
+.tl{
+	text-align: left;
+}
 /* 전체 공용 끝 */
