class 파일.. ignore가 안 된다...

--- a/HPP/.settings/org.eclipse.wst.common.component
+++ b/HPP/.settings/org.eclipse.wst.common.component
@@ -2,10 +2,12 @@
     <wb-module deploy-name="HPP">
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
-        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/java"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/target/generated-sources/annotations"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/target/generated-test-sources/test-annotations"/>
+        <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/test/resource"/>
         <property name="context-root" value="HPP"/>
-        <property name="java-output-path" value="/HPP/build/classes"/>
+        <property name="java-output-path" value="/HPP/target/classes"/>
     </wb-module>
 </project-modules>
