--- a/HPP/src/main/webapp/WEB-INF/resources/css/com/home.css
+++ b/HPP/src/main/webapp/WEB-INF/resources/css/com/home.css
@@ -1,89 +1,162 @@
 @charset "UTF-8";
 
-* {box-sizing:border-box}
-
-/* Slideshow container */
-.slideshow-container {
-  max-width: 1000px;
-  position: relative;
-  margin: auto;
+.swiper {
+	width: 100%;
+	padding-top: 50px;
+	padding-bottom: 50px;
 }
 
-/* Hide the images by default */
-.mySlides {
-  display: none;
+.swiper-slide {
+	background-position: center;
+	background-size: cover;
+	height: 500px;
+	width: 33%;
 }
 
-/* Next & previous buttons */
-.prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  margin-top: -22px;
-  padding: 16px;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
+.slideImg {
+	display: block;
+	width: 100%;
+	height: 100%;
 }
 
-/* Position the "next button" to the right */
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
+
+.homeTitle {
+	font-size: 25px;
+	font-weight: 900;
 }
 
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  margin-right: -0.75rem;
+  margin-left: -0.75rem;
 }
 
-/* Caption text */
-.text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
+figure.snip1200 {
+	font-family: 'Raleway', Arial, sans-serif;
+	position: relative;
+	overflow: hidden;
+	margin: 10px;
+	min-width: 220px;
+	max-width: 310px;
+	max-height: 310px;
+	width: 100%;
+	background: #000000;
+	color: #ffffff;
+	text-align: center;
+	box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
+	font-size: 16px;
 }
 
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
+figure.snip1200 * {
+	-webkit-box-sizing: border-box;
+	box-sizing: border-box;
+	-webkit-transition: all 0.45s ease-in-out;
+	transition: all 0.45s ease-in-out;
 }
 
-/* The dots/bullets/indicators */
-.dot {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
+figure.snip1200 img {
+	max-width: 100%;
+	position: relative;
+	opacity: 0.9;
 }
 
-.active, .dot:hover {
-  background-color: #717171;
+figure.snip1200 figcaption {
+	position: absolute;
+	top: 45%;
+	left: 7%;
+	right: 7%;
+	bottom: 45%;
+	border: 1px solid white;
+	border-width: 1px 1px 0;
 }
 
-/* Fading animation */
-.fadeIn {
-  animation-name: fadeIn;
-  animation-duration: 1.5s;
+figure.snip1200 .heading {
+	overflow: hidden;
+	-webkit-transform: translateY(50%);
+	transform: translateY(50%);
+	position: absolute;
+	bottom: 0;
+	width: 100%;
 }
 
-@keyframes fadeIn {
-  from {opacity: .4}
-  to {opacity: 1}
+figure.snip1200 h2 {
+	display: table;
+	margin: 0 auto;
+	padding: 0 10px;
+	position: relative;
+	text-align: center;
+	width: auto;
+	text-transform: uppercase;
+	font-weight: 400;
+}
+
+figure.snip1200 h2 span {
+	font-weight: 800;
+}
+
+figure.snip1200 h2:before, figure.snip1200 h2:after {
+	position: absolute;
+	display: block;
+	width: 1000%;
+	height: 1px;
+	content: '';
+	background: white;
+	top: 50%;
+}
+
+figure.snip1200 h2:before {
+	left: -1000%;
+}
+
+figure.snip1200 h2:after {
+	right: -1000%;
+}
+
+figure.snip1200 p {
+	top: 50%;
+	-webkit-transform: translateY(-50%);
+	transform: translateY(-50%);
+	position: absolute;
+	width: 100%;
+	padding: 0 20px;
+	margin: 0;
+	opacity: 0;
+	line-height: 1.6em;
+	font-size: 1.1em;
+}
+
+figure.snip1200 a {
+	left: 0;
+	right: 0;
+	top: 0;
+	bottom: 0;
+	position: absolute;
+	z-index: 1;
+}
+
+figure.snip1200:hover img, figure.snip1200.hover img {
+	opacity: 0.25;
+	-webkit-transform: scale(1.1);
+	transform: scale(1.1);
+}
+
+figure.snip1200:hover figcaption, figure.snip1200.hover figcaption {
+	top: 7%;
+	bottom: 7%;
+}
+
+figure.snip1200:hover p, figure.snip1200.hover p {
+	opacity: 1;
+	-webkit-transition-delay: 0.35s;
+	transition-delay: 0.35s;
+}
+
+figure.snip1200 img {
+	height: 340px;
+}
+
+figure.snip1200 {
+	max-width: 340px;
+	max-height: 340px;
 }
