--- a/HPP/src/main/webapp/WEB-INF/resources/css/com/home.css
+++ b/HPP/src/main/webapp/WEB-INF/resources/css/com/home.css
@@ -160,3 +160,81 @@ figure.snip1200 {
 	max-width: 340px;
 	max-height: 340px;
 }
+
+.moreClass {
+	float: right;
+	font-size: 15px;
+	font-weight: 900;
+}
+
+.moreClass:hover {
+	color: #fa91a2;
+	cursor: pointer;
+}
+
+.portfolio-item {
+  margin-bottom: 30px;
+}
+
+/* 이미지 확대 */
+.sample_image:hover {
+    -webkit-transform:scale(1.2);
+    -moz-transform:scale(1.2);
+    -ms-transform:scale(1.2);   
+    -o-transform:scale(1.2);
+    transform:scale(1.05);
+    transition-duration: 0.5s;
+}
+
+.card-img,
+.card-img-top,
+.card-img-bottom {
+  flex-shrink: 0;
+  width: 100%;
+}
+
+.card-img,
+.card-img-top {
+  border-top-left-radius: calc(0.25rem - 1px);
+  border-top-right-radius: calc(0.25rem - 1px);
+}
+
+.card-img,
+.card-img-bottom {
+  border-bottom-right-radius: calc(0.25rem - 1px);
+  border-bottom-left-radius: calc(0.25rem - 1px);
+}
+
+.card-img-top {
+	height: 300px;
+}
+
+.card-body {
+  flex: 1 1 auto;
+  min-height: 1px;
+  padding: 1.25rem;
+}
+
+.card-title {
+  margin-bottom: 0.75rem;
+}
+
+.card_title2, .card-title {
+	color: rgb(64, 60, 60);
+}
+
+.card_title2:hover {
+	color: #fa91a2;
+	text-decoration: none;
+}
+
+.topnav {
+	width: 60px;
+	height: 60px;
+	margin: 0 0 0 280px;
+}
+
+.introDiv{
+	font-family: 'Open Sans', sans-serif;
+	font-weight: bold;
+}
