--- a/HPP/src/main/webapp/WEB-INF/resources/css/common.css
+++ b/HPP/src/main/webapp/WEB-INF/resources/css/common.css
@@ -138,6 +138,15 @@
 .mb-3{margin-bottom: 1.5rem;}
 .mb-4{margin-bottom: 2.0rem;}
 
+.f-right{float: right;}
+.f-left{float: left;}
+.f-none{float: none;}
+.f-inherit{float: inherit;}
+
+.display-inb{display: inline-block;}
+.display-in{display: inline;}
+.display-b{display: block;}
+.display-n{display: none;}	
 
 .col-xl,
 .col-xl-auto, .col-xl-12, .col-xl-11, .col-xl-10, .col-xl-9, .col-xl-8, .col-xl-7, .col-xl-6, .col-xl-5, .col-xl-4, .col-xl-3, .col-xl-2, .col-xl-1, .col-lg,
@@ -151,8 +160,28 @@
   padding-left: 0.75rem;
 }
 
-  .col-lg-4 {
-    -ms-flex: 0 0 33.333333%;
-    flex: 0 0 33.333333%;
-    max-width: 33.333333%;
-  }
+.col-lg-4 {
+	-ms-flex: 0 0 33.333333%;
+	flex: 0 0 33.333333%;
+	max-width: 33.333333%;
+}
+
+.col-sm-6 {
+	flex: 0 0 50%;
+	max-width: 50%;
+}
+
+.col-md-4 {
+	flex: 0 0 33.3333333333%;
+	max-width: 33.3333333333%;
+}
+
+.col-md-8 {
+	flex: 0 0 66.6666666667%;
+	max-width: 66.6666666667%;
+}
+
+.col-lg-6 {
+	flex: 0 0 50%;
+	max-width: 50%;
+}
