--- a/HPP/src/main/webapp/WEB-INF/resources/css/template.css
+++ b/HPP/src/main/webapp/WEB-INF/resources/css/template.css
@@ -79,6 +79,10 @@ input[type = 'date']{
 	display: inline-block;
 }
 
+.form-control[readonly]{
+    background-color: #fff;
+}
+
 .wrap{
 	width: 100%;
 }
@@ -114,9 +118,10 @@ input[type = 'date']{
     line-height: 2;
    	font-weight: bold;
 	font-size: 15px;
-	background-color: #faf6f6;
-    border-right: 10px solid #818e99;
-    border-radius: 0 8% 5% 0;
+	background-color: #edecec;
+	border-right: 7px solid #5b5a59;
+    border-radius: 0 0% 50% 0;
+    clip-path: polygon(0% 0%, 0% 100%, 80% 100%, 85% 90%, 90% 80%, 95% 75%, 100% 50%, 100% 0);
 }
 
 .sideMnuTop{
