공지사항 팝업 개발 완료

--- a/HPP/src/main/webapp/WEB-INF/resources/css/common.css
+++ b/HPP/src/main/webapp/WEB-INF/resources/css/common.css
@@ -1,9 +1,23 @@
 @charset "UTF-8";
 
 .pointer{cursor: pointer;}
+
 .tr{text-align: right;}
 .tl{text-align: left;}
 .tc{text-align: center;}
+
+.f-right{float: right;}
+.f-left{float: left;}
+.f-none{float: none;}
+.f-inherit{float: inherit;}
+
+.display-inb{display: inline-block;}
+.display-in{display: inline;}
+.display-b{display: block;}
+.display-n{display: none;}	
+
+.vh100{height: 100vh;}
+.vw100{width: 100vw;}
 
 .w0{width:0%;} 
 .w5{width:5%;} 
@@ -137,16 +151,6 @@
 .mb-2{margin-bottom: 1.0rem;}
 .mb-3{margin-bottom: 1.5rem;}
 .mb-4{margin-bottom: 2.0rem;}
-
-.f-right{float: right;}
-.f-left{float: left;}
-.f-none{float: none;}
-.f-inherit{float: inherit;}
-
-.display-inb{display: inline-block;}
-.display-in{display: inline;}
-.display-b{display: block;}
-.display-n{display: none;}	
 
 .col-xl,
 .col-xl-auto, .col-xl-12, .col-xl-11, .col-xl-10, .col-xl-9, .col-xl-8, .col-xl-7, .col-xl-6, .col-xl-5, .col-xl-4, .col-xl-3, .col-xl-2, .col-xl-1, .col-lg,
