--- a/HPP/src/main/webapp/WEB-INF/resources/css/template.css
+++ b/HPP/src/main/webapp/WEB-INF/resources/css/template.css
@@ -85,7 +85,6 @@ input[type = 'date']{
 
 .wrap{
 	width: 100vw;
-	height: 100vh;
 }
 
 .fadeIn {
@@ -119,10 +118,12 @@ input[type = 'date']{
     line-height: 2;
    	font-weight: bold;
 	font-size: 15px;
+	/* 
 	background-color: #edecec;
 	border-right: 7px solid #5b5a59;
     border-radius: 0 0% 50% 0;
-    clip-path: polygon(0% 0%, 0% 100%, 80% 100%, 85% 90%, 90% 80%, 95% 75%, 100% 50%, 100% 0);
+    clip-path: polygon(0% 0%, 0% 100%, 80% 100%, 85% 90%, 90% 80%, 95% 75%, 100% 50%, 100% 0); 
+    */
 }
 
 .sideMnuTop{
@@ -134,8 +135,14 @@ input[type = 'date']{
     right: 0;
     width: var(--banner-width);  
     text-align: center;
-/*     line-height: calc(100vh - var(--header-heigth) - var(--footer-heigth)); */
-/* 	vertical-align: middle;   */
+    display: flex;             /* Flexbox 레이아웃 사용 */
+    justify-content: center;   /* 수평 중앙 정렬 */
+    align-items: center;       /* 수직 중앙 정렬 */
+}
+
+.bannerImg{
+	width: 150px; 
+	height: 250px;
 }
 
 .page_content{
