자유게시판 구현 중

--- a/HPP/src/main/webapp/WEB-INF/resources/css/template.css
+++ b/HPP/src/main/webapp/WEB-INF/resources/css/template.css
@@ -152,6 +152,7 @@ input[type = 'date']{
 			calc(var(--sideBar-width) + 20px);
 	width: calc(100vw - 40px - var(--banner-width) - var(--sideBar-width));
 	min-height: calc(100vh - var(--header-heigth) - var(--footer-heigth));
+	padding: 15px;
 }
 
 .home_content{
@@ -537,6 +538,11 @@ label{
     background-color: #f3f3f3;
     border-radius: 10px;
     padding: 5px;
+}
+
+.papang-content-div{
+	display: inline-block;
+	width: 100%;
 }
 
 .invisibleInput{
