--- a/HPP/src/main/webapp/WEB-INF/resources/css/template.css
+++ b/HPP/src/main/webapp/WEB-INF/resources/css/template.css
@@ -553,53 +553,46 @@ label{
 .cardWrap {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 1rem;
 }
 
 .cardItem {
     display: flex;
     background-color: var(--navMnu-backGround);
-    padding: 10px;
-    border-radius: 10px;
+    padding: 1rem;
+    border-radius: 1rem;
 }
 
 .cardImg {
-    flex-basis: 20%;
-    margin-right: 10px;
+    flex: 15% 0 0;
+    margin-right: 1rem;
     position: relative; /* Add position relative here */
-}
-
-#cardImgMsg {
-    position: absolute; /* Position the span absolutely */
-    top: 50%; /* Position at the center from the top */
-    left: 50%; /* Position at the center from the left */
-    transform: translate(-50%, -50%); /* Offset the span by its own dimensions */
-    color: white; /* Example text color for visibility */
-    background: rgba(0, 0, 0, 0.5); /* Example background for visibility */
-    padding: .5em 1em; /* Example padding */
-    border-radius: 5px; /* Example border radius */
-    max-width: 90%; /* Prevent span from being wider than its container */
-    text-align: center; /* Center the text inside the span */
-    white-space: nowrap; /* Prevent the text from wrapping */
-    overflow: hidden; /* Prevent overflow of the text */
-    text-overflow: ellipsis; /* Add an ellipsis if the text is too long */
-    display: none;
-    cursor: pointer;
 }
 
 .cardContent {
     flex-grow: 1;
     display: flex;
     flex-direction: column;
-    gap: 10px;
 }
 
 .cardTitle, .cardIntro, .cardBtn {
     border-radius: 5px;
 }
 
+.cardTitle, .cardIntro{
+	font-weight: bold;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+}
+
 .cardBtn {
 	text-align: right;	
+}
+
+.cardBtnImg{
+	margin-left: 0.2rem;
+	cursor: pointer;
 }
 
 .cardIntro {
@@ -612,5 +605,10 @@ label{
 
 .cardBtn > img{
 	height: 2rem;
+}
+
+.thumbnailImg{
+	width: 100%; 
+	height: 0px;
 }
 /* active 관련 끝 */
