--- a/HPP/src/main/webapp/WEB-INF/resources/css/com/home.css
+++ b/HPP/src/main/webapp/WEB-INF/resources/css/com/home.css
@@ -38,14 +38,15 @@ figure.snip1200 {
 	overflow: hidden;
 	margin: 10px;
 	min-width: 220px;
-	max-width: 310px;
-	max-height: 310px;
+	max-width: 350px;
+	max-height: 350px;
 	width: 100%;
 	background: #000000;
 	color: #ffffff;
 	text-align: center;
 	box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
 	font-size: 16px;
+	cursor: pointer;
 }
 
 figure.snip1200 * {
@@ -56,9 +57,11 @@ figure.snip1200 * {
 }
 
 figure.snip1200 img {
-	max-width: 100%;
+	height: 340px;
+	width: 100%;
 	position: relative;
 	opacity: 0.9;
+	filter: brightness(80%);
 }
 
 figure.snip1200 figcaption {
@@ -122,8 +125,9 @@ figure.snip1200 p {
 	padding: 0 20px;
 	margin: 0;
 	opacity: 0;
-	line-height: 1.6em;
+	line-height: 2em;
 	font-size: 1.1em;
+	white-space: nowrap;
 }
 
 figure.snip1200 a {
@@ -150,15 +154,6 @@ figure.snip1200:hover p, figure.snip1200.hover p {
 	opacity: 1;
 	-webkit-transition-delay: 0.35s;
 	transition-delay: 0.35s;
-}
-
-figure.snip1200 img {
-	height: 340px;
-}
-
-figure.snip1200 {
-	max-width: 340px;
-	max-height: 340px;
 }
 
 .moreClass {
