--- a/HPP/src/main/webapp/WEB-INF/resources/css/template.css
+++ b/HPP/src/main/webapp/WEB-INF/resources/css/template.css
@@ -78,6 +78,7 @@ input[type = 'date']{
   --left-width: 150px;  
   --navMnu-color: #692626;
   --navMnu-backGround: rgb(255 224 112);
+  --hpp-color:rgb(255 224 112);
 }
 
 .modal, .blocker{
@@ -546,6 +547,10 @@ label{
 	text-align: right;
 	display: none;
 }
+
+.color-hpp{
+	color : var(--hpp-color);	
+}
 /* 전체 공용 끝 */
 
 
@@ -564,7 +569,7 @@ label{
 }
 
 .cardImg {
-    flex: 15% 0 0;
+    flex: 13% 0 0;
     margin-right: 1rem;
     position: relative; /* Add position relative here */
 }
@@ -610,5 +615,6 @@ label{
 .thumbnailImg{
 	width: 100%; 
 	height: 0px;
+	cursor: pointer;
 }
 /* active 관련 끝 */
